<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mbeeseals.com.mbeedeals.singInFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/title_bar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"

        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Email_Sign_in"
            android:hint="@string/Email"
            android:maxLength="50"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Password"
            android:hint="@string/password"
            android:maxLength="20"
            android:maxLines="1"
            android:inputType="textPassword"
            android:gravity="right"
            android:textAlignment="gravity"
            android:layout_marginTop="@dimen/layout_marginTop"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <Button
                    android:text="@string/Sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_Button"
                    android:id="@+id/register"

                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/LinearLayout_Margin"
                    android:layout_marginBottom="@dimen/LinearLayout_Margin"
                    android:gravity="center"
                    >
                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/horizontal_height"
                        android:background="@color/horizontal_line"
                        android:layout_weight=".45"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".10"
                        android:text="أو"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_defualt"
                        android:textColor="@color/horizontal_line"

                        />
                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/horizontal_height"
                        android:background="@color/horizontal_line"
                        android:layout_weight=".45"
                        />

                </LinearLayout>
                <com.google.android.gms.common.SignInButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/google"

                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
